--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp-combine-media-queries": "^0.2.0",
     "gulp-concat": "^2.6.1",
     "gulp-eslint": "^6.0.0",
+    "gulp-html-beautify": "^1.0.1",
     "gulp-imagemin": "^9.1.0",
     "gulp-pug": "^5.0.0",
     "gulp-sass": "^5.1.0",
